--- a/code-exercise.html
+++ b/code-exercise.html
@@ -5,7 +5,7 @@
     <!-- Feel free to include a different version or framework, this is intended simply to save time -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- relative path to where we are generating the css file from the scss internally -->
-    <link type="text/css" rel="stylesheet" href="global-styles/mm-code-exercise.css">
+    <link type="text/css" rel="stylesheet" href="mm-code-exercise.css">
 
     <title>MassMutual Code Exercise</title>
   </head>
@@ -20,7 +20,7 @@
 
     <main class="container">
 
-      <div>
+      <div class="heading">
         <h1>MassMutual</h1>
         <h2>Coding Exercise</h2>
         <p>Here is a simple coding exercise for front end development at MassMutual.
@@ -29,13 +29,35 @@
           slightly from our live site.</p>
       </div>
 
-      <div>
+      <div class="cards">
+        <div class="mm-card">
+          <div class="image" style="background-image: url('http://via.placeholder.com/778x368');"></div>
+          <div class="content">
+            <p class="eyebrow">category</p>
+            <p class="card-title">Card Title</p>
+            <p>The title above should use the same style as the h2 at the top of this page but not be an H2 itself.</p>
+            <footer>
+              <button class="btn-primary">a button!</button>
+            </footer>
+          </div>
+        </div>
+        <div class="mm-card">
+          <div class="image" style="background-image: url('http://via.placeholder.com/778x368');"></div>
+          <div class="content">
+            <p class="eyebrow">category</p>
+            <p class="card-title">Card Title</p>
+            <p>The title above should use the same style as the h2 at the top of this page but not be an H2 itself.</p>
+            <footer>
+              <a href="example.com">A Link!</a>
+            </footer>
+          </div>
+        </div>
         <!-- some basic html to start off the cards, go forth and be awesome -->
         <div class="mm-card">
           <div class="image" style="background-image: url('http://via.placeholder.com/778x368');"></div>
           <div class="content">
-            <p>category</p>
-            <p>Card Title</p>
+            <p class="eyebrow">category</p>
+            <p class="card-title">Card Title</p>
             <p>The title above should use the same style as the h2 at the top of this page but not be an H2 itself.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
             <footer>
